spade-tests/src/snapshots/spade_tests__parser__wal_traceable_with_unexpected_param_is_error.snap
---
source: spade-tests/src/parser.rs
---
#[wal_traceable(a, uses_clk, this_is_not_valid)]
struct T {}


error: Invalid parameter for wal_traceable
  ┌─ testinput:1:17
  │
1 │ #[wal_traceable(a, uses_clk, this_is_not_valid)]
  │                 ^ Invalid parameter
  │
  = note: wal_traceable only takes the parameters suffix, uses_clk or uses_rst


